--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="message-container">
           <h1 id="message">Mañana temprano</h1>
+          <img src="perro.png" alt="Persona dando una cachetada">
         </div>
   
         
